Fixed contacts overlapping on small displays

--- a/app/sass/foundation/hutby/_page-content.scss
+++ b/app/sass/foundation/hutby/_page-content.scss
@@ -97,7 +97,7 @@ $page-content-background-image: 'bg-grey-radial.jpg';
   }
 
   .#{$prefix}-sidenav-footer-position-helper {
-    height: $tabbar-height;
+    height: $footer-height;
   }
 
   .#{$prefix}-sidenav-footer {
